[package]
name = "syncer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4.23"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
clap = { version = "4.0", features = ["derive"] }
subprocess = "0.2"
pathsearch = "0.2"
path-clean = "0.1"
tempfile = "3.3"